Section spacing fix

--- a/src/_sass/pages/projects/_virb.scss
+++ b/src/_sass/pages/projects/_virb.scss
@@ -218,7 +218,12 @@ $aqua: #3de5d2;
 
   }
 }
-
+.virb {
+  section.work {
+    padding-bottom:0;
+    overflow:hidden;
+  }
+}
 // Listings page styles
 
 .device-wraps {
